export interface Question {
  id: number
  section_id: number
  question_text: string
  answer_type: string
  required: boolean
}