export interface Requirement {
  id: number
  compliance_list_id: number
  name: string
  description: string
  status: string
}