export interface Section {
  id: number
  assessment_tracker_id: number
  name: string
  total_questions: number
  completed_questions: number
}