erDiagram
    Project ||--o{ Compliance_Tracker : has
    Project ||--o{ Risk : has
    Project ||--o{ Assessment_Tracker : has
    Project ||--o{ Vendor : has
    Vendor ||--o{ VendorRisk : has
    User ||--o{ Project : owns
    User }|--|| Role : has
    Compliance_Tracker ||--|{ Compliance_List : includes
    Compliance_List ||--|{ Requirement : contains
    Requirement ||--|{ Subrequirement : contains
    Subrequirement ||--|| Overview : has
    Subrequirement ||--o{ Evidence : has
    Subrequirement ||--o{ Auditor_Feedback : has
    Assessment_Tracker ||--|{ Section : contains
    Section ||--|{ Question : includes

    User {
        int id PK
        string name
        string email
        string password_hash
        int role_id FK
        date created_at
        date last_login
    }

    Role {
        int id PK
        string name
        string description
    }

    Project {
        int id PK
        string name
        string description
        date last_updated
        int owner_id FK
        string compliance_status
        int controls_completed
        int requirements_completed
    }

    Risk {
        int id PK
        int project_id FK
        string risk_description
        string impact
        string probability
        int owner_id FK
        string severity
        string likelihood
        string risk_level
    }

    Vendor {
        int id PK
        string name
        int project_id FK
        string description
        string website
        string contact_person
        string review_result
        string review_status
        int reviewer_id FK
        date review_date
        string risk_status
    }

    VendorRisk {
        int id PK
        int vendor_id FK
        string risk_description
        string impact_description
        int project_id FK
        string probability
        string impact
        string action_plan
        int action_owner_id FK
        string risk_severity
        string likelihood
        string risk_level
    }

    Compliance_Tracker {
        int id PK
        int project_id FK
        float compliance_status
        int pending_audits
        int completed_assessments
        int implemented_controls
    }

    Compliance_List {
        int id PK
        int compliance_tracker_id FK
        string name
        string description
    }

    Requirement {
        int id PK
        int compliance_list_id FK
        string name
        string description
        string status
    }

    Subrequirement {
        int id PK
        int requirement_id FK
        string name
        string description
        string status
    }

    Overview {
        int id PK
        int subrequirement_id FK
        string control_name
        string control_description
        string control_owner
        string control_status
        string implementation_description
        string implementation_evidence
        date effective_date
        date review_date
        string comments
    }

    Evidence {
        int id PK
        int subrequirement_id FK
        string document_name
        string document_type
        string file_path
        date upload_date
        int uploader_id FK
        string description
        string status
        date last_reviewed
        int reviewer_id FK
        string review_comments
    }

    Auditor_Feedback {
        int id PK
        int subrequirement_id FK
        string assessment_type
        date assessment_date
        int auditor_id FK
        string compliance_status
        string findings
        string recommendations
        string corrective_actions
        date follow_up_date
        string follow_up_notes
        string attachments
        date created_at
        date updated_at
    }

    Assessment_Tracker {
        int id PK
        int project_id FK
        string name
        string status
    }

    Section {
        int id PK
        int assessment_tracker_id FK
        string name
        int total_questions
        int completed_questions
    }

    Question {
        int id PK
        int section_id FK
        string question_text
        string answer_type
        boolean required
    }
